src/modals/add-book/styles.scss
@import "../../styles.scss";

.omb-modal.add-book {
  padding: 32px;
  height: min-content;
  width: auto;
  margin: auto 16px;

  @include media("tablet") {
    width: 400px;
  }

}

.add-book {
  &__header {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;

    &__close {
      color: $gray;
      height: 20px;
      width: 20px;
      cursor: pointer;
    }
  }

  &__content {
    padding: 16px 0;
    display: flex;
    flex-direction: column;
    text-align: center;
    gap: 16px;

    &__title {
      font-weight: 600;
      font-family: $lora;
      font-size: 18px;
      line-height: 30px;
      font-family: $poppins;
      color: $black;
    }

    &__text {
      font-family: $poppins;
      font-size: 14px;
      line-height: 20px;
      color: $gray;
    }

    &__form {
      display: flex;
      flex-direction: column;
      gap: 8px;
      text-align: left;

      &__item {
        display: flex;
        flex-direction: column;

        &__label {
          font-weight: 500;
          font-size: 14px;
          line-height: 21px;
          font-family: $poppins;
          color: $black;
          margin-bottom: 4px;
        }

        &__input {
          width: 100%;
          border: 1px solid $ligth-gray;
          color: $black;
          font-size: 16px;
          font-weight: 400;
          line-height: 18px;
          padding: 12px 16px;
          transform: scale(0.875);
          transform-origin: left center;
          border-radius: 6px;
          font-family: $poppins;
        }

        &__error {
          font-weight: 500;
          font-size: 12px;
          line-height: 21px;
          font-family: $poppins;
          color: $red-dark;
        }
      }

      &__button {
        margin-top: 16px;
        align-self: center;
        background: $green;
        color: $white;
        padding: 12px 32px;
        border-radius: 6px;
        font-weight: 600;
        font-size: 16px;
        line-height: 18px;
        border: none;
        font-family: $poppins;
        text-transform: uppercase;
        width: 100%;
        box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
          rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;

        &:hover {
          background: $yellow-dark;
          cursor: pointer;
        }
      }
    }
  }

  &__footer {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 16px;
    padding: 8px 0;

    &__button {
      align-self: center;
      background: #4264a3;
      color: #fff;
      text-decoration: none;
      text-transform: uppercase;
      width: max-content;
      padding: 9px 14px;
      font-size: 14px;
      line-height: 18px;
      border: none;
      border-radius: 5px;
      cursor: pointer;
      box-shadow: 0 10px 15px -3px rgb(0 0 0 / 10%),
        0 4px 6px -2px rgb(0 0 0 / 5%);

        &:focus-visible {
          outline: none;
        }

      &--cancel {
        background: $gray;

        &:hover {
          background: $gray-dark;
        }
      }

      &--delete {
        background: $red;

        &:hover {
          background: $red-dark;
        }
      }
    }
  }
}

